[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "ampo"
dynamic = ["version"]
authors = [
  { name="Alexey Matveev", email="" },
]
description = "Python library async ORM for mongodb. Object as pyDantic"
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "License :: OSI Approved :: MIT License",
]
dependencies = [
  'motor>=3.2',
  'pydantic>=2.0',
]

[project.urls]
"Homepage" = "https://github.com/shizacat/ampo"

[tool.hatch.version]
path = "ampo/__init__.py"

[tool.hatch.build]
exclude = [
  "tests/*",
]
